[package]
edition = "2021"
name = "getting-started-embassy-stm32f401re"
version = "0.1.0"
authors = ["maurodangelo <maurodangelo@users.noreply.github.com>"]
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm","critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embassy-stm32 = { version = "0.1.0", path = "embassy-stm32", features = ["defmt", "stm32f401re", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-sync = { version = "0.6.0", path = "embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.6.0", path = "embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", path = "embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

embassy-futures = { version = "0.1.0" }
defmt = "0.3"
defmt-rtt = "0.4"

embedded-hal = "0.2.6"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
usbd-hid = "0.8.1"
static_cell = "2"
chrono = { version = "^0.4", default-features = false}

[profile.release]
debug = 2